# epdiy-clock

./: .gitignore  .gitmodules  CMakeLists.txt  font_time_traveler.h  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  common.h  compress.c  epdiy-clock.c  fb_save_load.c  idf_component.yml  joysticks.c  request.c  settings.h  sleep.c  time_sync.c  wifi.c
main/font/: time_traveler.c
main/include/: common.h  compress.h  fb_save_load.h  joysticks.h  request.h  settings.h  time_sync.h  wifi.h
scripts/: gen_font.sh
